...
    <>
      <Text style={styles.title}>{l('로그인')}</Text>
      <View style={styles.formGroup}>
        <FormTextInput
          value={loginIdentifier}
          onChangeText={setLoginIdentifier}
          placeholder="이메일 또는 닉네임"
          style={[styles.input, styles.inputDescenderSafe]}
          placeholderTextColor={colors.gray3}
          fieldType="identifier"
        />
        <View style={styles.passwordInputRow}>
          <FormTextInput
...
