appId: kr.co.checkmo.app
---
- clearKeychain
- launchApp:
    clearState: true
- openLink: "checkmo://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    text: "열기"
    optional: true
- tapOn:
    text: "건너뛰고 시작하기"
    optional: true
- extendedWaitUntil:
    visible: "책모 홈"
    timeout: 20000

- tapOn: "마이페이지, tab, 5 of 5"
- extendedWaitUntil:
    visible: "로그인"
    timeout: 10000
- assertVisible: "이메일 또는 닉네임"
- assertVisible: "비밀번호"

- tapOn: "이메일 또는 닉네임"
- inputText: ${EMAIL}
- tapOn: "비밀번호"
- inputText: ${PASSWORD}
- tapOn:
    text: "로그인"
    index: 1

- extendedWaitUntil:
    notVisible: "이메일 또는 닉네임"
    timeout: 20000
- assertNotVisible: "로그인이 필요해요"
